// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`REST endpoint testing for /admin/region create item when logged in as an admin and the item is valid Returns the expected result 1`] = `
Object {
  "code": "test-region",
  "countryId": "d6e57673-eee8-444a-b7be-d9ab553052cf",
  "isDisabled": false,
  "lat": 10,
  "lng": 15,
  "name": "Test region",
}
`;

exports[`REST endpoint testing for /admin/region delete item when logged in as an admin Returns the expected result 1`] = `
Object {
  "code": "test-region",
  "countryId": "d6e57673-eee8-444a-b7be-d9ab553052cf",
  "isDisabled": false,
  "lat": 10,
  "lng": 15,
  "name": "Test region",
}
`;

exports[`REST endpoint testing for /admin/region edit item when logged in as an admin Returns the expected result 1`] = `
Object {
  "code": "test-region",
  "countryId": "d6e57673-eee8-444a-b7be-d9ab553052cf",
  "isDisabled": true,
  "lat": 15,
  "lng": -5,
  "name": "Test region 2",
}
`;

exports[`REST endpoint testing for /admin/region get all when logged in as an admin Returns the expected result 1`] = `
Array [
  Object {
    "code": "region_is_disabled",
    "countryId": "2168cb5e-a2e9-4bf6-b50d-95ad6a79227c",
    "id": "region_is_disabled",
    "isDisabled": true,
    "lat": -25,
    "lng": -25,
    "name": "Region set to disabled",
  },
  Object {
    "code": "gbr",
    "countryId": "1fc52423-eb83-4cd9-9fdd-b6f9cb323c37",
    "id": "gbr",
    "isDisabled": false,
    "lat": 50,
    "lng": 50,
    "name": "UK",
  },
  Object {
    "code": "usa-1",
    "countryId": "d6e57673-eee8-444a-b7be-d9ab553052cf",
    "id": "usa-1",
    "isDisabled": false,
    "lat": -50,
    "lng": -50,
    "name": "USA",
  },
]
`;

exports[`REST endpoint testing for /admin/region get single item when logged in as an admin Returns the expected result 1`] = `
Object {
  "code": "usa-1",
  "countryId": "d6e57673-eee8-444a-b7be-d9ab553052cf",
  "id": "usa-1",
  "isDisabled": false,
  "lat": -50,
  "lng": -50,
  "name": "USA",
}
`;
